@@ -1,3 +1,7 @@
+2002-02-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* structinsp.cc (update): display value and name of enums
+
 2002-01-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
 
 	* objinsp.tcl (create_structpanel): Added vertical scrollbars for
